fix: usando variaveis env no config, reconfigurando dockerfile e compose após wsgi

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     depends_on:
       - mongodb
     volumes:
-      - .:/app
+      - ./application:/app/application
     environment:
       - FLASK_ENV=development
+      - MONGO_DB=flask_api
+      - MONGO_HOST=mongodb
+      - MONGO_USER=admin
+      - MONGO_PASS=admin
