--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aniso8601==9.0.1
 bandit==1.7.5
 black==23.3.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.3
 dnspython==2.2.1
 email-validator==1.2.1
@@ -34,6 +36,7 @@ pyflakes==2.4.0
 Pygments==2.15.1
 pymongo==4.1.1
 pytest==7.3.1
+python-dotenv==1.0.1
 pytz==2022.1
 PyYAML==6.0
 rich==13.3.4
@@ -42,6 +45,7 @@ six==1.16.0
 smmap==5.0.0
 stevedore==5.0.0
 tomli==2.0.1
+urllib3==2.3.0
 validate-docbr==1.10.0
 Werkzeug==2.1.2
 WTForms==3.0.1
